Updated all postman API's requests and tested them

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -10,10 +10,23 @@ defaults
 
 frontend http_front
     bind *:80
-    default_backend http_back
+    use_backend customers_back if { path_beg /api/customers }
+    use_backend sales_back if { path_beg /api/sales }
+    use_backend inventory_back if { path_beg /api/inventory }
+    use_backend reviews_back if { path_beg /api/reviews }
 
-backend http_back
+backend customers_back
     balance roundrobin
-    server app1 app:5000 check
-    server app2 app:5000 check
-    server app3 app:5000 check
+    server app1 customers:5000 check
+
+backend sales_back
+    balance roundrobin
+    server app1 sales:5000 check
+
+backend inventory_back
+    balance roundrobin
+    server app1 inventory:5000 check
+
+backend reviews_back
+    balance roundrobin
+    server app1 reviews:5000 check
