--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,55 @@
 version: '3.8'
 
 services:
-  app:
+  customers:
     build:
       context: .
       dockerfile: Dockerfile
-    deploy:
-      replicas: 3  # Scale to 3 instances
     environment:
       - FLASK_ENV=development
-      - FLASK_APP=app.py
+      - FLASK_APP=app/app.py
+      - SERVICE=customers
+    ports:
+      - "5001:5000"  # Unique port for customers
+    networks:
+      - app-network
+
+  sales:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=app/app.py
+      - SERVICE=sales
+    ports:
+      - "5002:5000"  # Unique port for sales
+    networks:
+      - app-network
+
+  inventory:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=app/app.py
+      - SERVICE=inventory
+    ports:
+      - "5003:5000"  # Unique port for inventory
+    networks:
+      - app-network
+
+  reviews:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - FLASK_ENV=development
+      - FLASK_APP=app/app.py
+      - SERVICE=reviews
+    ports:
+      - "5004:5000"  # Unique port for reviews
     networks:
       - app-network
 
@@ -20,9 +60,16 @@ services:
     networks:
       - app-network
 
-networks:
-  app-network:
-    driver: bridge
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: ecommerce
+    ports:
+      - "5432:5432"
+    networks:
+      - app-network
 
   haproxy:
     image: haproxy:latest
@@ -31,6 +78,13 @@ networks:
     volumes:
       - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
     depends_on:
-      - app
+      - customers
+      - sales
+      - inventory
+      - reviews
     networks:
       - app-network
+
+networks:
+  app-network:
+    driver: bridge
